--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -30,7 +30,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background: #0ff; /*Changed background color*/
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -100,7 +100,7 @@
     background: none;
 }
 
-@media(min-width:768px) {
+@media(min-width:768px) {/*Responsiveness*/
     #wrapper {
         padding-left: 250px;
     }
