--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -30,7 +30,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #0ff; /*Changed background color*/
+    background: #c0c0c0; /*Changed background color*/
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
