--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -7,6 +7,7 @@
  body {
     overflow-x: hidden;
  }
+/*Paste changes from master css under here, for changing the background-color for jumbotron.*/
 
 /* Toggle Styles */
 
